--- a/assets/stylesheets/common/discourse-debates.scss
+++ b/assets/stylesheets/common/discourse-debates.scss
@@ -14,27 +14,15 @@
     display: flex;
     gap: 0.75em;
 
-    button {
-      display: flex;
-      align-items: center;
-      gap: 0.4em;
-      padding: 0.5em 0.9em;
-      border-radius: 6px;
-      border: 1px solid var(--primary-low);
-      background: var(--primary-very-low);
-      cursor: pointer;
-
-      &.yes {
-        color: var(--success);
-      }
-
-      &.no {
-        color: var(--danger);
-      }
-
+    button.btn {
       &.active {
-        border-color: var(--tertiary);
-        font-weight: bold;
+        background-color: var(--tertiary);
+        color: #fff;
+      }
+
+      &:disabled {
+        opacity: 0.6;
+        cursor: wait;
       }
     }
   }
